# cmake-avr

./: .gitignore  CMakeLists.txt.sample  LICENSE  README.md  TODO.md  generic-gcc-avr.cmake  install.sh
Modules/: FindGeneric-AVR-GCC.cmake  defaultDocuTarget.cmake
example/: CMakeLists.txt  README.md  doxygen.conf  main.c
example-c++/: CMakeLists.txt  README.md  doxygen.conf
example-c++/cppapp/: CMakeLists.txt  main.cc
example-c++/mycpplib/: CLed.cc  CLed.hh  CMakeLists.txt
example/app/: CMakeLists.txt  main.c
example/mylib/: CMakeLists.txt  mylib.c  mylib.h
