#####################################################################
# simple AVR executable
#####################################################################
add_avr_executable(
   toggle-led-cpp
   main.cc
   )

#####################################################################
# libraries to link to
#####################################################################
target_link_libraries(
   toggle-led-cpp-${AVR_MCU}.elf
   mycpplib-${AVR_MCU}
   )
